# arca-automation

./: .gitignore  LICENSE  PENDIENTES.md  README.md  config.local.env  main.py  pyproject.toml  telegram_bot.py
desktop/facturador_pyqt6_app/: README.md  __init__.py  main.py
desktop/facturador_pyqt6_app/core/: __init__.py  about.py  cert_generator.py  config.py  paths.py
desktop/facturador_pyqt6_app/ui/: __init__.py  main_window.py  styles.py  tab_certs.py  tab_config.py  tab_run.py  widgets.py
packaging/: facturador.spec
scripts/: build_desktop.ps1  build_desktop.sh
src/: bootstrap.py  metadata.py  paths.py  pipeline.py
src/domain/: config.py  datetime_utils.py  exceptions.py  income.py  models.py  ports.py
src/providers/: afip_sdk.py  mercadopago.py
src/providers/afip/: __init__.py  afip_electronic_billing.py  auth.py  models.py  transport.py  wsfe_settings.py
src/providers/approval/: __init__.py  auto.py  telegram.py  telegram_bot_worker.py
src/providers/observability/: __init__.py  logfire.py  protocol.py  sentry.py  stdio.py
src/repositories/: common.py  payment_repository.py  postgres_payment_repository.py  sqlite_payment_repository.py
src/use_cases/: issue_invoice.py  postpone_payment.py  process_payments.py  reject_payment.py
tests/: test_config_export.py  test_database.py  test_pipeline_telegram.py
tests/domain/: test_datetime_utils.py  test_income.py
tests/providers/: test_afip_auth.py  test_afip_certificate_validation.py  test_mercadopago.py  test_observability.py  test_telegram_approval.py  test_telegram_bot_worker.py  test_wsfe_env_loading.py
tests/use_cases/: test_approval_flow.py  test_process_payments_afip_errors.py
