[project]
name = "arca-automation"
version = "0.1.0"
description = "Automatiza facturación AFIP desde MercadoPago (CLI, desktop y Telegram)."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Damian Debortoli", email = "developer.ddebortoli@gmail.com" }]

[project.urls]
Homepage = "https://www.ddebortoli.dev/"
dependencies = [
    "cryptography>=44.0.0",
    "httpx>=0.27.0",
    "logfire[system-metrics]>=4.37.0",
    "PySide6>=6.7.0",
    "PyQt6>=6.6.0",
    "lxml>=5.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "psycopg[binary]>=3.2.0",
    "zeep>=4.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pyinstaller>=6.10.0",
    "black>=26.5.1",
]

[project.optional-dependencies]
logfire = ["logfire>=3.0.0"]
sentry = ["sentry-sdk>=2.0.0"]
observability = ["logfire>=3.0.0", "sentry-sdk>=2.0.0"]

[tool.pytest.ini_options]
pythonpath = [".", "desktop/facturador_pyqt6_app"]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py313"]
